# cloudarg

./: .gitignore  Jenkinsfile  README.md  github.sh  pom.xml
gateway/: pom.xml
gateway/src/main/java/arche/cloud/cloudarg/gateway/: WebApplication.java
netty-gateway/: Dockerfile  build.sh  pom.xml  redis.sh  run.sh
netty-gateway/src/main/java/arche/cloud/netty/: HttpRequestHandler.java  HttpServer.java  HttpServerInitializer.java  PortalHandler.java  UserHandler.java
netty-gateway/src/main/java/arche/cloud/netty/client/: ColdChannelPool.java  ProxyInitializer.java  RpcClient.java  RpcInboundHandler.java
netty-gateway/src/main/java/arche/cloud/netty/config/: Config.java  ConfigFactory.java  Mysql.java  Redis.java
netty-gateway/src/main/java/arche/cloud/netty/db/: MysqlDataSource.java  RedisUtil.java
netty-gateway/src/main/java/arche/cloud/netty/exceptions/: BackendNotFound.java  Database.java  IllegalRoute.java  Internal.java  NotAuthorized.java  NotSupport.java  ParameterRequired.java  Responsable.java  RouteNotFound.java
netty-gateway/src/main/resources/: config.json  config.yml
netty-gateway/test/: redis.sh
rust-gateway/: Cargo.toml  README.md  rust-watch.sh
rust-gateway/resources/: config.yaml
rust-gateway/src/: config.rs  favicon.rs  lib.rs  main.rs  main_server.rs  manage_server.rs  user.rs
rust-gateway/src/entities/: config.rs  response_wrapper.rs  user.rs  user_request.rs
rust-gateway/src/resources/: config.yml
rust-gateway/src/response_text/: 404.json  home.json
test/: 2.sh  cloudarg.http  redis.sh
(+49 files in other folders)
