[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Cloudbeer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
once_cell = "1.9"
yaml-rust = "0.4"
regex = "1.5.4"
redis = { version = "0.21", features = [ "cluster"] }
hyper-tls = "0.5.0"
